unpackaged/main/default/objects/CancellationLine__c/CancellationLine__c.object-meta.xml
<CustomObject>
    <label>Cancellation Line</label>
    <nameField>
        <label>Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>