unpackaged/main/default/objects/CancellationLine__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Cancellation</label>
    <referenceTo>Cancellation__c</referenceTo>
    <relationshipLabel>Cancellation Lines</relationshipLabel>
    <relationshipName>CancellationLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>