unpackaged/main/default/objects/CancellationLine__c/fields/LoadType__c.field-meta.xml
<CustomField>
    <fullName>LoadType__c</fullName>
    <label>Load Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>