unpackaged/main/default/objects/CancellationLine__c/fields/MRR_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>MRR_Cancelled__c</fullName>
    <formula>UnitPrice__c * QuantityCancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR Cancelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>