unpackaged/main/default/objects/CancellationLine__c/fields/MRR_New__c.field-meta.xml
<CustomField>
    <fullName>MRR_New__c</fullName>
    <formula>UnitPrice__c * NewQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>