unpackaged/main/default/objects/CancellationLine__c/fields/NextDateRenewal__c.field-meta.xml
<CustomField>
    <fullName>NextDateRenewal__c</fullName>
    <label>Next Date Renewal</label>
    <type>Date</type>
</CustomField>