unpackaged/main/default/objects/CancellationLine__c/fields/QuantityCancelled__c.field-meta.xml
<CustomField>
    <fullName>QuantityCancelled__c</fullName>
    <label>Quantity to cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>