unpackaged/main/default/objects/CancellationLine__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <formula>UnitPrice__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>